# metal-matrices

./: .clang-format  .gitignore  Cargo.toml  README.md  STRUCTURE.md  build.rs  flake.nix  justfile  makefile  rust-toolchain.toml
.helix/: languages.toml
benches/: matrix_multiplication.rs  matrix_scaling.rs
docs/: benchmark-comparison.md  benchmark-scaling.md  toolchain-build-system.md  toolchain.md
examples/: cpu_basics.rs  metal_runtime.rs
scripts/: generate_benchmark_report.py  generate_scaling_plots.py
shaders/: matrix_multiplication.metal
src/: lib.rs  main.rs  matrix.rs  metal.rs  numeric.rs  vector.rs
