[package]
name = "matrix_test"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
metal = "0.31.0"
objc = "0.2.7"
ndarray = "0.16.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matrix_multiplication"
harness = false

[[bench]]
name = "matrix_scaling"
harness = false

[[example]]
name = "cpu_basics"
path = "examples/cpu_basics.rs"

[[example]]
name = "metal_runtime"
path = "examples/metal_runtime.rs"
