[package]
name = "metal_matrices"
version = "0.1.0"
edition = "2021"

[features]
default = []
metal = ["dep:metal", "dep:objc"]

[dependencies]
thiserror = "2.0.11"
metal = { version = "0.31.0", optional = true }
objc = { version = "0.2.7", optional = true }
ndarray = "0.16.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matrix_multiplication"
harness = false

[[bench]]
name = "matrix_scaling"
harness = false

[[example]]
name = "cpu_basics"
path = "examples/cpu_basics.rs"

[[example]]
name = "metal_runtime"
path = "examples/metal_runtime.rs"
required-features = ["metal"]
